--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -1,8 +1,6 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    bluecompute: "true"
   name: "{{ .Release.Name }}-{{ .Values.service.name }}"
   labels:
     chart: "{{ .Release.Name }}-{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -66,7 +64,7 @@ spec:
           - name: host
             value: "{{ .Release.Name }}-{{ .Values.service.cloudantservicename }}"
           - name: auth_health
-            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}/health"
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/health"
           - name: PORT
             value: "{{ .Values.service.servicePort }}"
           - name: RELEASE_NAME
