--- a/chart/customer/templates/cloudant-db.yaml
+++ b/chart/customer/templates/cloudant-db.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ .Release.Name }}-{{ .Values.service.cloudantservicename }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    release: {{ .Release.Name }}
     implementation: microprofile
 spec:
   type: {{ .Values.cloudant.type }}
@@ -13,6 +14,7 @@ spec:
   selector:
     micro: customer
     service: cloudant-db
+    release: {{ .Release.Name }}
     implementation: microprofile
 ---
 {{- if .Values.persistence.enabled }}
@@ -23,6 +25,7 @@ metadata:
   labels:
     app: bluecompute
     tier: backend
+    release: {{ .Release.Name }}
     implementation: microprofile
 spec:
   accessModes:
@@ -48,6 +51,7 @@ metadata:
     micro: customer
     service: cloudant-db
     tier: backend
+    release: {{ .Release.Name }}
     implementation: microprofile
     chart: '{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}'
 spec:
@@ -59,6 +63,7 @@ spec:
         micro: customer
         service: cloudant-db
         tier: backend
+        release: {{ .Release.Name }}
         implementation: microprofile
 
     spec:
