--- a/chart/customer/Chart.yaml
+++ b/chart/customer/Chart.yaml
@@ -2,3 +2,6 @@ apiVersion: v1
 description: A Helm chart for Kubernetes
 name: customer
 version: 0.0.1
+home: https://github.com/ibm-cloud-architecture/refarch-cloudnative-kubernetes/tree/microprofile
+sources:
+  - https://github.com/ibm-cloud-architecture/refarch-cloudnative-micro-customer/tree/microprofile
