--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -20,6 +20,8 @@ service:
   servicePort: 9080
   servicePortHttps: 9443
   auth: auth
+  zipkinHost: zipkin
+  zipkinPort: 9411
 
 services:
 base:
