Dynamic realm implementation for metrics

--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -79,6 +79,8 @@ spec:
             value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/jwk"
           - name: jwksIssuer
             value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP"
+          - name: administratorRealm
+            value: user:https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/user
         resources:
           requests:
             cpu: "{{ .Values.image.resources.requests.cpu }}"
