--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <jwt.id>myMpJwt</jwt.id>
         <jwksUri>https://auth:9443/oidc/endpoint/OP/jwk</jwksUri>
         <jwksIssuer>https://auth:9443/oidc/endpoint/OP</jwksIssuer>
-        <jwksIssuer>user:https://auth:9443/oidc/endpoint/OP/user</jwksIssuer>
+        <administratorREealm>user:https://auth:9443/oidc/endpoint/OP/user</administratorREealm>
 
         <app.name>customer</app.name>
         <testServerHttpPort>9080</testServerHttpPort>
