--- a/chart/customer/templates/cloudant-db.yaml
+++ b/chart/customer/templates/cloudant-db.yaml
@@ -72,7 +72,7 @@ spec:
       # Container for Cloudant
       - name: cloudant
         image: ibmcom/cloudant-developer
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
             - containerPort: {{ .Values.cloudant.port }}
         env:
