--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -49,7 +49,7 @@ spec:
       # Liberty Server Container
       - name: "{{ .Chart.Name }}"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.imagePullPolicy }}
+        imagePullPolicy: Always
         readinessProbe:
           httpGet:
             path: /
