--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -7,7 +7,7 @@ image:
   #repository: customer-mp
   repository: ibmcase/customer-mp
   tag: v4.0.0
-  pullPolicy: IfNotPresent
+  #pullPolicy: IfNotPresent
   resources:
     requests:
       cpu: 200m
