--- a/chart/customer/templates/ingress.yaml
+++ b/chart/customer/templates/ingress.yaml
@@ -2,12 +2,11 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-{{ .Chart.Name }}
+  name: {{ template "customer.fullname" . }}
   #annotations:
   #  ingress.kubernetes.io/rewrite-target: /
   labels:
-    release: {{ .Release.Name | quote }}
-    chart: {{ .Chart.Name}}-{{ .Chart.Version }}
+    {{- include "customer.labels" . | indent 4 }}
 spec:
   {{- if .Values.tls.enabled }}
   tls:
@@ -15,7 +14,7 @@ spec:
     {{- if .Values.ingress.hostname }}
     - {{ .Values.ingress.hostname }}
     {{- else }}
-    - {{ template "customerServiceName" . }}
+    - {{ template "customer.fullname" . }}
     {{- end }}
     {{- if .Values.tls.secretName }}
     secretName: {{ .Values.tls.secretName }}
@@ -27,12 +26,12 @@ spec:
   {{- if .Values.ingress.hostname }}
   - host: {{ .Values.ingress.hostname }}
   {{- else }}
-  - host: {{ template "customerServiceName" . }}
+  - host: {{ template "customer.fullname" . }}
   {{- end }}
     http:
       paths:
       - path: {{ .Values.ingress.path }}
         backend:
-          serviceName: {{ template "customerServiceName" . }}
+          serviceName: {{ template "customer.fullname" . }}
           servicePort: {{ .Values.service.externalPort }}
 {{- end }}
