--- a/chart/customer/templates/service.yaml
+++ b/chart/customer/templates/service.yaml
@@ -1,21 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.service.name }}
+  name: {{ template "customer.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    app: bluecompute
-    micro: customer
-    tier: backend
-    release: {{.Release.Name | quote }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    {{- include "customer.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.service.externalPort }}
-    targetPort: {{ .Values.service.internalPort }}
+  - name: http
     protocol: TCP
-    name: http
+    port: {{ .Values.service.externalPort }}
+    targetPort: {{ .Values.service.internalPort }}
+{{- if and (eq .Values.service.type "NodePort") .Values.service.nodePort }}
+    nodePort: {{ .Values.service.nodePort }}
+{{- end }}
   selector:
-    app: bluecompute
-    micro: customer
-    tier: backend
+    {{- include "customer.labels" . | indent 4 }}
