--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ env:
     - RELEASE_NAME=customer
     - TAG=travis-latest
     - HS256_KEY=E6526VJkKYhyTFRFMC0pTECpHcZ7TGcq8pKsVVgz9KtESVpheEO284qKzfzg8HpWNBPeHOxNGlyudUHi6i8tFQJXC8PiI48RUpMh23vPDLGD35pCM0417gf58z5xlmRNii56fwRCmIhhV7hDsm3KO2jRv4EBVz7HrYbzFeqI45CaStkMYNipzSm2duuer7zRdMjEKIdqsby0JfpQpykHmC5L6hxkX0BT7XWqztTr6xHCwqst26O0g8r7bXSYjp4a
-    - COUCHDB_USER=admin
-    - COUCHDB_PASSWORD=passw0rd
+    - COUCHDB_ADMIN_USER=admin
+    - COUCHDB_ADMIN_PASSWORD=passw0rd
+    - TEST_USER=testuser
+    - TEST_PASSWORD=passw0rd
 stages:
   - local build and test
   - docker build, deploy, and test
@@ -29,7 +31,7 @@ jobs:
       before_script:
       # Start CouchDB 2.1.2 and wait for it to start
       # Using this instead of built-in couchdb, which is 1.6.1
-      - docker run --name couchdb -p 5984:5984 -e COUCHDB_USER=${COUCHDB_USER} -e COUCHDB_PASSWORD=${COUCHDB_PASSWORD} -d couchdb:2.1.2
+      - docker run --name couchdb -p 5984:5984 -e COUCHDB_USER=${COUCHDB_ADMIN_USER} -e COUCHDB_PASSWORD=${COUCHDB_ADMIN_PASSWORD} -d couchdb:2.1.2
       # Wait for CouchDB to Start
       - sleep 20
       # Test CouchDB
@@ -44,7 +46,7 @@ jobs:
       # Run Customer API Test
       # TODO: Test more APIs
       # NOTE: Using separate script due to Travis CI limitations
-      - bash scripts/api_tests.sh 127.0.0.1 8080 $HS256_KEY $COUCHDB_USER $COUCHDB_PASSWORD
+      - bash scripts/api_tests.sh 127.0.0.1 8080 $HS256_KEY $TEST_USER $TEST_PASSWORD
     - stage: docker build, deploy, and test
       services:
       - docker
@@ -53,7 +55,7 @@ jobs:
       before_script:
       # Start CouchDB 2.1.2 and wait for it to start
       # Using this instead of built-in couchdb, which is 1.6.1
-      - docker run --name couchdb -p 5984:5984 -e COUCHDB_USER=${COUCHDB_USER} -e COUCHDB_PASSWORD=${COUCHDB_PASSWORD} -d couchdb:2.1.2
+      - docker run --name couchdb -p 5984:5984 -e COUCHDB_USER=${COUCHDB_ADMIN_USER} -e COUCHDB_PASSWORD=${COUCHDB_ADMIN_PASSWORD} -d couchdb:2.1.2
       # Wait for CouchDB to Start
       - sleep 20
       # Test CouchDB
@@ -65,9 +67,7 @@ jobs:
       # Build Docker image
       - docker build -t "${IMAGE_NAME}:${TAG}" .
       # Start Customer Container and Connect to local MySQL Service
-      - set -x;
-      - docker run --net=host --name customer -d -p 8080:8080 -e HS256_KEY=${HS256_KEY} -e COUCHDB_URI="http://${COUCHDB_USER}:${COUCHDB_PASSWORD}@${COUCHDB_IP}:5984" "${IMAGE_NAME}:${TAG}"
-      - set +x;
+      - docker run --net=host --name customer -d -p 8080:8080 -e HS256_KEY=${HS256_KEY} -e COUCHDB_URI="http://${COUCHDB_ADMIN_USER}:${COUCHDB_ADMIN_PASSWORD}@${COUCHDB_IP}:5984" "${IMAGE_NAME}:${TAG}"
       # Wait for the Customer container to start accepting connections
       - sleep 25
       # Check that the Customer container is running
@@ -76,7 +76,7 @@ jobs:
       - docker logs customer
       # Run Customer API Test
       # TODO: Test more APIs, perhaps with a separate script
-      - bash scripts/api_tests.sh 127.0.0.1 8080 $HS256_KEY $COUCHDB_USER $COUCHDB_PASSWORD
+      - bash scripts/api_tests.sh 127.0.0.1 8080 $HS256_KEY $TEST_USER $TEST_PASSWORD
     - stage: kubernetes build, deploy, and test
       services:
       - docker
@@ -132,4 +132,4 @@ jobs:
       # Run Customer API Test
       - MINIKUBE_IP=$(minikube ip)
       - NODE_PORT=$(kubectl get service ${RELEASE_NAME}-customer -o=jsonpath='{.spec.ports[0].nodePort}')
-      - bash scripts/api_tests.sh $MINIKUBE_IP $NODE_PORT $HS256_KEY $COUCHDB_USER $COUCHDB_PASSWORD
+      - bash scripts/api_tests.sh $MINIKUBE_IP $NODE_PORT $HS256_KEY $TEST_USER $TEST_PASSWORD
