--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -33,6 +33,8 @@ bash:
     tag: latest
     pullPolicy: IfNotPresent
 
+createUser: true
+
 # Included Community Couchdb Chart.
 # - Even if disabled, these fields are used to provide information
 #   for external CouchDB deployments.
