--- a/chart/customer/templates/hs256key.yaml
+++ b/chart/customer/templates/hs256key.yaml
@@ -1,8 +1,8 @@
-{{ if not .Values.hs256key.secretName }}
+{{ if and (not .Values.global.hs256key.secretName) (not .Values.hs256key.secretName) }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "customer.hs256SecretName" . }}
+  name: {{ template "customer.hs256key.secretName" . }}
   labels:
     {{- include "customer.labels" . | indent 4 }}
 data:
