--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -2,14 +2,14 @@ replicaCount: 1
 
 image:
   repository: ibmcase/bluecompute-customer
-  pullPolicy: Always
   tag: 0.5.0
+  pullPolicy: Always
 
 service:
-  name: customer
   type: ClusterIP
   externalPort: 8080
   internalPort: 8080
+  nodePort: 31382
 
 ingress:
   enabled: false
