--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -15,6 +15,8 @@ ingress:
   enabled: false
   hostname: customer.bluecompute.com
   path: /micro/customer
+  ibmCloud:
+    redirectToHTTPS: false
 
 tls:
   enabled: false
