--- a/chart/customer/requirements.yaml
+++ b/chart/customer/requirements.yaml
@@ -1,6 +1,5 @@
 dependencies:
   - name: couchdb
-    alias: customercouchdb
     version: 0.1.7
     repository: http://storage.googleapis.com/kubernetes-charts-incubator
-    condition: customercouchdb.enabled
+    condition: couchdb.enabled
