--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -47,7 +47,7 @@ bash:
 # Included Community Couchdb Chart.
 # - Even if disabled, these fields are used to provide information
 #   for external CouchDB deployments.
-customercouchdb:
+couchdb:
   enabled: true
   image: 
     repository: "couchdb"
