--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,6 @@ jobs:
       # Wait for the Customer container to start accepting connections
       - sleep 25
       # Run Customer API Test
-      # TODO: Test more APIs
-      # NOTE: Using separate script due to Travis CI limitations
       - bash scripts/api_tests.sh 127.0.0.1 8080 $HS256_KEY $TEST_USER $TEST_PASSWORD
     - stage: docker build, deploy, and test
       services:
@@ -75,7 +73,6 @@ jobs:
       # Check logs to see if it started properly
       - docker logs customer
       # Run Customer API Test
-      # TODO: Test more APIs, perhaps with a separate script
       - bash scripts/api_tests.sh 127.0.0.1 8080 $HS256_KEY $TEST_USER $TEST_PASSWORD
     - stage: kubernetes build, deploy, and test
       services:
@@ -86,31 +83,8 @@ jobs:
         - true
       before_script:
       # Install nsenter, which is needed for minikube to work
-      - bash scripts/install_nsenter.sh 
-      # Download kubectl, which is a requirement for using minikube.
-      - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
-      # Download minikube.
-      - curl -Lo minikube https://storage.googleapis.com/minikube/releases/v0.25.2/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
-      - sudo minikube start --vm-driver=none --kubernetes-version=v1.9.0
-      # Fix the kubectl context, as it's often stale.
-      - minikube update-context
-      # Getting ip for testing
-      - minikube ip
-      # Wait for Minikube to be up and ready.
-      - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
-      # Download Helm CLI
-      - curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get > get_helm.sh && chmod 700 get_helm.sh && ./get_helm.sh && rm get_helm.sh
-      # Create Tiller Service Account
-      - kubectl -n kube-system create sa tiller && kubectl create clusterrolebinding tiller --clusterrole cluster-admin --serviceaccount=kube-system:tiller
-      # Install Helm on Minikube
-      - helm init --service-account tiller
-      # Wait for helm to be ready
-      - until helm list; do echo "waiting for helm to be ready"; sleep 1; done
-      # Add incubator Helm repo
-      - helm repo add incubator http://storage.googleapis.com/kubernetes-charts-incubator
+      - bash scripts/install_minikube_and_helm.sh
       script:
-      # Get cluster info
-      - kubectl cluster-info
       # Build Docker image
       - docker build -t "${IMAGE_NAME}:${TAG}" .
       # Download Customer chart dependencies (MySQL)
