- Took out dependency chart

--- a/chart/customer/templates/couchdb-secret.yaml
+++ b/chart/customer/templates/couchdb-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.couchdb.enabled) .Values.couchdb.adminUsername .Values.couchdb.adminPassword }}
+{{- if and (not .Values.couchdb.existingSecret) .Values.couchdb.adminUsername .Values.couchdb.adminPassword }}
 apiVersion: v1
 kind: Secret
 metadata:
