--- a/.travis.yml
+++ b/.travis.yml
@@ -84,6 +84,8 @@ jobs:
       before_script:
       # Install nsenter, which is needed for minikube to work
       - bash scripts/install_minikube_and_helm.sh
+      # Install CouchDB
+      - helm upgrade --install couchdb --version 0.1.7 --set fullnameOverride=customer-couchdb,createAdminSecret=true,adminUsername=user,adminPassword=passw0rd,clusterSize=1,persistentVolume.enabled=false incubator/couchdb
       script:
       # Build Docker image
       - docker build -t "${IMAGE_NAME}:${TAG}" .
